syntax = "proto3";

package main;

option go_package = ".";

import "google/api/annotations.proto";

service TrafficAnalyzer {
  rpc ReceiveData (TrafficData) returns (TrafficDataReceiveResponse) {
    option (google.api.http) = {
      post: "/v1/receive_data"
      body: "*"
    };
  }
  rpc GetTodayStatistics (IntersectionRequest) returns (TrafficAnalytics) {
    option (google.api.http) = {
      post: "/v1/get_today_statistics"
      body: "*"
    };
  }
  rpc GetLastWeekStatistics (IntersectionRequest) returns (TrafficAnalytics) {
    option (google.api.http) = {
      post: "/v1/get_last_week_statistics"
      body: "*"
    };
  }
  rpc GetNextWeekPredictions (IntersectionRequest) returns (TrafficAnalytics) {
    option (google.api.http) = {
      post: "/v1/get_next_week_predictions"
      body: "*"
    };
  }
}

message TrafficData {
  int32 intersection_id = 1;
  int32 signal_status_1 = 2;
  int32 vehicle_count = 3;
  bool incident = 4;
  string date = 5;
  string time = 6;
}

message TrafficDataReceiveResponse {
  string message = 1;
}

message IntersectionRequest {
  int32 intersection_id = 1;
}

message TrafficAnalytics {
  int32 intersection_id = 1;
  string timestamp = 2;
  double average_vehicle_count = 3;
  string peak_hours = 4;
  float average_incidents = 5;
}
